# EasyParking

./: .dockerignore  .env  .env.prod  .gitignore  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  dotenv.md  pyproject.toml
a_core/: asgi.py  celery.py  settings.py  urls.py  validators.py  wsgi.py
about/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
about/templates/: about.html
accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
accounts/fixtures/: accounts.json  profiles.json
accounts/migrations/: 0001_initial.py  0002_alter_customuser_birth_date_and_more.py  0003_alter_customuser_managers_and_more.py  0004_alter_customuser_car_type_alter_customuser_gender.py  0005_alter_customuser_options.py  0006_customuser_city_customuser_country_and_more.py  0007_remove_customuser_address_remove_customuser_car_type_and_more.py  0008_alter_profile_zip_code.py
accounts/templates/: account.html  account_address_change.html  account_password_change.html  account_personal_change.html  login.html  register.html
app/: __init__.py  apps.py  views.py
app/templatetags/: app_tags.py
app_conf/: Dockerfile  Dockerfile.prod  create_volume.sh  refresh_static.zsh  run_app_dev.sh  run_app_prod.sh  update_style.zsh  update_tailwind.zsh  uv_sync_dev.sh  uv_sync_prod.sh
app_conf/angie/: .htpasswd  angie.conf  dev.htpasswd  (+1 more)
basket/: apps.py  models.py  urls.py  utils.py  views.py
contacts/: apps.py  urls.py  views.py
djcelery_email/: __about__.py  apps.py  backends.py  conf.py  models.py  tasks.py  utils.py
home/: apps.py  urls.py  views.py
news/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
order/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
services/: crud.py
shop/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
templates/: 404.html  about.html  base.html  contact-us.html  home.html  news.html
(+109 files in other folders)
